# cv_gstream

./: CMakeLists.txt  README.md  opencv_testing.cpp  reciver.cpp  sender.cpp
